overlap fix??

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body a:active {
 }
 
 nav {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
